# GReflectionGeneratorTool

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: ReflectionGeneratorConfig.cmake.in
examples/: CMakeLists.txt  basic_usage.cpp
src/: ClassParser.cpp  ClassParser.h  CodeGenerator.cpp  CodeGenerator.h  FileScanner.cpp  FileScanner.h  ReflectionAST.h  main.cpp
